# PC

./: CMakeLists.txt  PC.sh  knn_mpi.cpp  knn_mpi_euclidiana.cpp  knn_mpi_manhattan.cpp  knn_pthread.cpp  main.py  saida.txt  saida_161.txt  saida_PC.txt
Processar a saida/: gear_grafico.R  geral.csv  main.py  mpi_euclidiano.csv  mpi_manhattan.csv  pthread_euclidiano.csv  pthread_manhattan.csv  sequencial.csv
